--- a/Example/DALI/Base.lproj/Main.storyboard
+++ b/Example/DALI/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="DKJ-q2-DPo">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pI9-j3-dsa">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -22,11 +22,11 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wSF-wx-VnC">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="569"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qax-ip-Ych">
-                                <rect key="frame" x="166" y="626" width="42" height="21"/>
+                                <rect key="frame" x="166" y="577" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -51,12 +51,77 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="32.799999999999997" y="36.431784107946029"/>
+            <point key="canvasLocation" x="1039" y="231"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="TTy-Il-tee">
+            <objects>
+                <navigationController id="Nc0-t3-esE" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="more" id="1Bm-Kp-fsY"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Jgu-VC-ycF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="APp-Kj-3IU" kind="relationship" relationship="rootViewController" id="0mP-tq-KPT"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HAN-xp-dh3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="199" y="1057"/>
+        </scene>
+        <!--Checkin View Controller-->
+        <scene sceneID="8Ug-9O-haF">
+            <objects>
+                <tableViewController id="APp-Kj-3IU" customClass="CheckinViewController" customModule="DALI_Example" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="mYh-wr-QaJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="76u-QA-1v5">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="76u-QA-1v5" id="7kA-fM-SlF">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="APp-Kj-3IU" id="wXO-7d-bpY"/>
+                            <outlet property="delegate" destination="APp-Kj-3IU" id="WAQ-Xx-g7b"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="uBc-z9-K6A"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fsu-Ww-uxC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="937" y="1057"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="meb-G3-FlP">
+            <objects>
+                <tabBarController id="pI9-j3-dsa" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="LeD-aW-7J2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="DKJ-q2-DPo" kind="relationship" relationship="viewControllers" id="uyZ-aK-8Lu"/>
+                        <segue destination="Nc0-t3-esE" kind="relationship" relationship="viewControllers" id="nM6-b1-xLb"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jHo-SO-1n5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-753" y="788"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="evk-lm-MdR">
             <objects>
                 <navigationController id="DKJ-q2-DPo" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="contacts" id="lco-dt-DFq"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="hpn-te-IZG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -67,7 +132,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ldt-c1-z2S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-802" y="36"/>
+            <point key="canvasLocation" x="340" y="231"/>
         </scene>
     </scenes>
 </document>
